# sassyshell

./: .gitignore  CONTRIBUTING.md  README.md  data.json  pyproject.toml
.github/workflows/: publish.yml
src/sassyshell/: cli.py  config.py  llm_client.py  storage.py
