[project]
name = "sassyshell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-ollama>=0.3.10",
    "langchain[anthropic,google-genai,groq,openai]>=0.3.27",
    "pydantic-settings>=2.11.0",
    "scikit-learn>=1.7.2",
    "typer>=0.19.2",
]

[project.scripts]
sassysh = "sassyshell.cli:app"

[tool.uv]
override-dependencies = [ # Annoying warnings/logs
    "grpcio==1.67.1",
]
package = true

